--- a/shopweb/localization/ro.json
+++ b/shopweb/localization/ro.json
@@ -138,5 +138,15 @@
    "code" : "126",
    "name" : "order.id",
    "text" : "Identificator comanda"
+ },
+ {
+   "code" : "127",
+   "name" : "contact",
+   "text" : "Pentru informatii suplimentare contactati-ne pe "
+ },
+ {
+   "code" : "128",
+   "name" : "order.subject",
+   "text" : "Comanda I-Did"
  }
 ]
