--- a/shopweb/localization/ro.json
+++ b/shopweb/localization/ro.json
@@ -116,21 +116,31 @@
  },
  {
    "code" : "122",
+   "name" : "order.cnp",
+   "text" : "CNP"
+ },
+ {
+   "code" : "123",
+   "name" : "invalid.cnp",
+   "text" : "CNP-ul nu este corect"
+ },
+ {
+   "code" : "124",
    "name" : "order.done",
    "text" : "Multumim pentru comanda facuta. In scurt timp veti primi confirmarea prin email."
  },
  {
-   "code" : "123",
+   "code" : "125",
    "name" : "cart.empty",
    "text" : "Cosul este gol"
  },
  {
-   "code" : "124",
+   "code" : "126",
    "name" : "order.items.required",
    "text" : "Cel putin un produs este necesar pentru a face comanda"
  },
  {
-   "code" : "125",
+   "code" : "127",
    "name" : "thank.you",
    "text" : "Multumim pentru comanda facuta."
  },
@@ -183,8 +193,7 @@
    "code" : "137",
    "name" : "order.fail",
    "text" : "Ne cerem scuze. Comanda nu poate fi procesata momentan."
- }
- ,
+ },
  {
    "code" : "138",
    "name" : "connect.fail",
