--- a/shopweb/localization/ro.json
+++ b/shopweb/localization/ro.json
@@ -323,5 +323,10 @@
    "code" : "166",
    "name" : "save",
    "text" : "Salveaza"
+ },
+ {
+   "code" : "167",
+   "name" : "view",
+   "text" : "Vizualizeaza"
  }
 ]
