--- a/shopweb/localization/ro.json
+++ b/shopweb/localization/ro.json
@@ -495,6 +495,11 @@
    "text" : "Nu a fost gasita nici o comanda pentru: %s"
  },
  {
+   "code" : "204",
+   "name" : "order.not.found",
+   "text" : "Comanda %s nu a fost gasita"
+ }
+ {
    "code" : "205",
    "name" : "unique.product",
    "text" : "Produs unicat"
