--- a/shopweb/localization/ro.json
+++ b/shopweb/localization/ro.json
@@ -553,6 +553,11 @@
    "code" : "208",
    "name" : "search",
    "text" : "Cauta"
+ },
+ {
+   "code" : "208",
+   "name" : "order.comments",
+   "text" : "Comentarii"
  }
  
 ]
