--- a/shopweb/localization/ro.json
+++ b/shopweb/localization/ro.json
@@ -608,6 +608,11 @@
    "code" : "208",
    "name" : "transport.2",
    "text" : "Transport prin Posta Romana - 9.99 Lei"
+ },
+ {
+   "code" : "208",
+   "name" : "delete.user",
+   "text" : "Sterge utilizatorul"
  }
  
 ]
