--- a/shopweb/localization/ro.json
+++ b/shopweb/localization/ro.json
@@ -612,7 +612,7 @@
  {
    "code" : "208",
    "name" : "transport.2",
-   "text" : "Transport prin Posta Romană - 9.99 Lei"
+   "text" : "Transport prin Poșta Romană - 9.99 Lei"
  },
  {
    "code" : "208",
