--- a/shopweb/localization/ro.json
+++ b/shopweb/localization/ro.json
@@ -567,7 +567,7 @@
  {
    "code" : "208",
    "name" : "modify.orders",
-   "text" : "Modifica comenzi"
+   "text" : "Modifică comenzi"
  },
  {
    "code" : "208",
