--- a/shopweb/localization/ro.json
+++ b/shopweb/localization/ro.json
@@ -611,6 +611,11 @@
  },
  {
    "code" : "208",
+   "name" : "delete",
+   "text" : "Șterge"
+ },
+ {
+   "code" : "208",
    "name" : "no.permissions",
    "text" : "Operațiune neautorizată"
  },
