--- a/shopweb/localization/ro.json
+++ b/shopweb/localization/ro.json
@@ -382,7 +382,7 @@
  {
    "code" : "175",
    "name" : "login.fail",
-   "text" : "Autentificare eșuata."
+   "text" : "Autentificare eșuată."
  },
  {
    "code" : "177",
