--- a/shopweb/localization/ro.json
+++ b/shopweb/localization/ro.json
@@ -142,7 +142,7 @@
  {
    "code" : "125",
    "name" : "cart.empty",
-   "text" : "Cosul este gol"
+   "text" : "Coșul este gol"
  },
  {
    "code" : "126",
